// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KolInputContainerFc should render correctly 1`] = `<div class="input"></div>`;

exports[`KolInputContainerFc should render with both startAdornment and endAdornment 1`] = `
<div class="input">
  <kol-icon _icons="codicon codicon-start-icon" _label="" _tabindex="-1"></kol-icon>
  <kol-icon _icons="codicon codicon-end-icon" _label="" _tabindex="-1"></kol-icon>
</div>
`;

exports[`KolInputContainerFc should render with children 1`] = `
<div class="input">
  <input type="text">
</div>
`;

exports[`KolInputContainerFc should render with endAdornment 1`] = `
<div class="input">
  <kol-icon _icons="codicon codicon-end-icon" _label="" _tabindex="-1"></kol-icon>
</div>
`;

exports[`KolInputContainerFc should render with startAdornment 1`] = `
<div class="input">
  <kol-icon _icons="codicon codicon-start-icon" _label="" _tabindex="-1"></kol-icon>
</div>
`;
